--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,6 @@ include 'iowacity'
 include 'niem'
 include 'migration'
 include 'sacramento'
+include 'JCDispatch'
+include 'MockHealth'
+include 'HudsonCounty'
