--- a/MockHealth/build.gradle
+++ b/MockHealth/build.gradle
@@ -6,20 +6,19 @@ plugins {
     id "jacoco"
 }
 
-apply from: "https://raw.githubusercontent.com/kryptnostic/gradles/master/mavenRepos.gradle"
+apply from: "https://raw.githubusercontent.com/openlattice/gradles/master/repos.gradle"
 
 description = "Demo Health Data Integration"
 group = "com.openlattice"
 version = 'v0.0.1'
 
 mainClassName = "com.openlattice.integrations.mockHealth.DemoHealth"
-applicationDefaultJvmArgs = ["-Xmx12G", "-Xms12G", "-server"]
+applicationDefaultJvmArgs = ["-Xmx1G", "-Xms1G", "-server"]
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-//TODO: Use credentials from environment variables.
 run {
-    if(System.getProperty("exec.args") != null) {
+    if (System.getProperty("exec.args")) {
         args System.getProperty("exec.args").split()
     }
 }
@@ -28,51 +27,41 @@ configurations {
     provided
 }
 
-configurations.all {
-    exclude module: 'slf4j-log4j12'
-}
-
 sourceSets {
     main.compileClasspath += configurations.provided
     test.compileClasspath += configurations.provided
     test.runtimeClasspath += configurations.provided
 }
 
+jar {
+    doFirst {
+        manifest {
+            attributes "Class-Path": configurations.runtime.files.collect { it.getName() }.join(" ")
+        }
+    }
+}
+
 dependencies {
     if (project.hasProperty('developmentMode') && project.developmentMode) {
         logger.quiet(project.name + " using project dependencies.")
         compile project(":shuttle")
-        /*compile project(":loom-api")
-
-        testCompile( project(path: ":loom-api", configuration: "tests"))
-        testCompile( project(path: ":rhizome", configuration: "tests"))
-        te stCompile( project(path: ":rhizome-client", configuration: "tests"))*/
     } else {
         logger.quiet(project.name + " using jar dependencies.")
-        compile 'com.kryptnostic:shuttle:0.1.8-SNAPSHOT'
-
-        /*compile "com.kryptnostic:rhizome:${rhizome_version}"
-        compile "com.kryptnostic:loom-api:${loom_api_version}"
-        compile "com.kryptnostic:kindling:${kindling_version}"
-
-        testCompile "com.kryptnostic:loom-api:${loom_api_version}:tests"
-        testCompile "com.kryptnostic:rhizome:${rhizome_version}:tests"
-        testCompile "com.kryptnostic:rhizome-client:${rhizome_client_version}:tests"*/
+        compile "com.openlattice:shuttle:0.0.0-SNAPSHOT"
     }
 
     compile fileTree(dir: "lib/", include: "*.jar")
+}
 
-    /*
-     * TESTING
-     */
-    testCompile "junit:junit:4.12"
-    testCompile "org.mockito:mockito-core:2.2.7";
+
+
+startScripts {
+    classpath = files(jar.archivePath)
 }
 
 eclipse {
     ext.downloadSources = true
     ext.downloadJavadoc = true
-
     ext.sourceCompatibility = JavaVersion.VERSION_1_8
     ext.targetCompatibility = JavaVersion.VERSION_1_8
 }
