--- a/JCDispatch/build.gradle
+++ b/JCDispatch/build.gradle
@@ -61,6 +61,7 @@ jar {
 }
 
 dependencies {
+    compile 'com.microsoft.sqlserver:mssql-jdbc:6.2.2.jre8'
     if (project.hasProperty('developmentMode') && project.developmentMode) {
         logger.quiet(project.name + " using project dependencies.")
         compile project(":shuttle")
